--- a/app/main/default/classes/dao/OrderDao.cls
+++ b/app/main/default/classes/dao/OrderDao.cls
@@ -3,18 +3,20 @@
  */
 
 public with sharing class OrderDao implements IOrderDao {
-  public Order getById(Id id) {
-    List<Order> orders = [
-      SELECT
-        Id,
-        Pricebook2Id,
-        (SELECT Id, OrderId, PricebookEntryId FROM OrderItems)
-      FROM Order
-      WHERE Id = :id
-    ];
-    if (orders.isEmpty()) {
-      throw new QueryException('There is no such order with of id: ' + id);
+    public Order getById(Id id) {
+        List<Order> orders = [
+            SELECT
+                Id,
+                Pricebook2Id,
+                (SELECT Id, OrderId, PricebookEntryId FROM OrderItems)
+            FROM Order
+            WHERE Id = :id
+        ];
+        if (orders.isEmpty()) {
+            throw new QueryException(
+                'There is no such order with of id: ' + id
+            );
+        }
+        return orders.get(0);
     }
-    return orders.get(0);
-  }
 }
