--- a/app/main/default/classes/dao/PricebookDao.cls
+++ b/app/main/default/classes/dao/PricebookDao.cls
@@ -3,7 +3,7 @@
  */
 
 public with sharing class PricebookDao implements IPricebookDao {
-    public Map<Id, PricebookEntry> getEntriesByPricebookOrEntriesIdLike(
+    public List<PricebookEntry> getEntriesByPricebookOrEntriesIdLike(
         Id pricebookId,
         Set<Id> pricebookEntriesIds,
         String productNameSearchTerm
@@ -12,15 +12,24 @@ public with sharing class PricebookDao implements IPricebookDao {
             productNameSearchTerm = '';
         }
         String likeClause = '%' + productNameSearchTerm + '%';
-        return new Map<Id, PricebookEntry>(
-            [
-                SELECT UnitPrice, Product2.Id, Product2.Name
-                FROM PricebookEntry
-                WHERE
-                    (Pricebook2Id = :pricebookId
-                    OR Id IN :pricebookEntriesIds)
-                    AND Product2.Name LIKE :likeClause
-            ]
-        );
+        return [
+            SELECT UnitPrice, Product2.Id, Product2.Name
+            FROM PricebookEntry
+            WHERE
+                (Pricebook2Id = :pricebookId
+                OR Id IN :pricebookEntriesIds)
+                AND Product2.Name LIKE :likeClause
+        ];
+    }
+
+    public List<PricebookEntry> getEntriesByPricebookAndProductIds(
+        Id pricebookId,
+        Set<Id> productIds
+    ) {
+        return [
+            SELECT UnitPrice, Product2Id, Product2.Name
+            FROM PricebookEntry
+            WHERE Product2Id IN :productIds AND Pricebook2Id = :pricebookId
+        ];
     }
 }
