--- a/app/main/default/classes/services/contracts/IAvailableProductComponentService.cls
+++ b/app/main/default/classes/services/contracts/IAvailableProductComponentService.cls
@@ -2,9 +2,7 @@
  * Created by Ilya Matsuev on 2/27/2021.
  */
 
-public interface IAvailableProductComponentService {
-    Order getOrder(Id orderId);
-
+public interface IAvailableProductComponentService extends IOrderService {
     List<ProductWrapper> getAvailableProducts(
         Order order,
         String productNameSearchTerm
