--- a/app/main/default/classes/dao/Contracts/IOrderDao.cls
+++ b/app/main/default/classes/dao/Contracts/IOrderDao.cls
@@ -6,4 +6,6 @@ public interface IOrderDao {
     Order getById(Id id);
 
     List<OrderItem> upsertOrderItems(List<OrderItem> orderItems);
+
+    Order updateOrder(Order order);
 }
